# rivka-git-PDF-Attendance-Variator

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
attendance_report/: __init__.py  config.py  exceptions.py
attendance_report/classifier/: classifier.py  keyword_config.py
attendance_report/generator/: __init__.py  pdf_generator.py
attendance_report/models/: __init__.py  attendance_report.py  attendance_row.py
attendance_report/ocr/: __init__.py  extractor.py
attendance_report/parser/: __init__.py  base_parser.py  parser_factory.py  type_a_parser.py  type_b_parser.py  type_c_parser.py
attendance_report/service/: __init__.py  processing_service.py
attendance_report/tests/: __init__.py  test_attendance_row.py  test_classifier.py  test_determinism.py  test_parser_factory.py  test_pipeline_integration.py  test_quality_gate.py  test_transformation_service.py  test_type_a_parser.py
attendance_report/validation/: __init__.py  observer.py  rules_provider.py  transformation_service.py  transformation_strategy.py  validating_decorator.py  validation_rules.py
